Add basic stuff

--- a/manifest.json
+++ b/manifest.json
@@ -1,3 +1,10 @@
 {
-
+  "display": "standalone",
+  
+  "name": "Tic Tac Toe",
+  "short_name": "Tic Tac Toe",
+  "description": "Get three in a row!",
+  
+  "theme_color": "#00bcd4",
+  "background_color": "#ffecb3"
 }
