--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,5 @@
   "description": "Get three in a row!",
   
   "theme_color": "#00bcd4",
-  "background_color": "#ffecb3"
+  "background_color": "#eee"
 }
